# easy-csv

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
docs/: animal_island_AI_USAGE.md  notes.md  xan_functions.md
docs/AI/: INDEX.md
docs/cmd/: batch-filter.md  batch-from.md  batch-to.md  output.md
docs/cmd_zh/: agg.md  batch-filter.md  batch-from.md  batch-to.md  behead.md  bins.md  bisect.md  blank.md  cat.md  complete.md  count.md  dedup.md  drop.md  enum.md  eval.md  explode.md  fill.md  filter.md  flatten.md  fmt.md  frequency.md  from.md  groupby.md  head.md  headers.md  heatmap.md  help.md  hist.md  implode.md  input.md  join.md  map.md  matrix.md  merge.md  network.md  output.md  parallel.md  partition.md  pivot.md  plot.md  (+26 more)
scripts/: generate-help-docs.js
src/: App.tsx  index.css  main.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: readme.md
src-tauri/src/: config.rs  csv.rs  lib.rs  main.rs  pipeline.rs  storage.rs  xan.rs
src/__tests__/: BatchConvertHooks.test.ts  BatchFilterHooks.test.ts  commands.test.ts  invoke.test.ts
src/components/: CommandList.tsx  HomeView.tsx  LogPanel.tsx  MainMenu.tsx  ParameterPanel.tsx  PersistentNotification.tsx  PipelineBuilder.tsx  PipelineFlow.tsx  SettingsDialog.tsx  SettingsTabContent.tsx  SpreadsheetView.tsx  ThemeAwareCheckbox.tsx  ThemeProvider.tsx  ThemeTransition.tsx  Toast.tsx
src/components/dialog/: BatchFilterDialog.tsx  CommandDialog.tsx  ConfirmDialog.tsx  DateTransformDialog.tsx  FilterDialog.tsx  NumberTransformDialog.tsx  PadDialog.tsx  PivotDialog.tsx  ReplaceDialog.tsx  SortDialog.tsx  SplitDialog.tsx  TextTransformDialog.tsx  UpdateDialog.tsx  (+1 more)
src/data/: commands.ts  xan-functions.ts
src/hooks/: BatchConvertHooks.ts  BatchFilterHooks.ts  KeyboardShortcuts.ts  MainMenuHooks.ts  useAppSettings.ts  useDraggable.ts  useLogs.ts  usePipelineState.ts  useTabs.ts  useToast.ts  useUIState.ts
src/i18n/: index.tsx  translations.ts
src/test/: setup.ts
src/types/: animal-island-ui.d.ts  xan.ts
src/utils/: format.ts
(+66 files in other folders)
