[package]
name = "easy-csv"
version = "0.1.0"
description = "The CSV magician with GUI"
authors = ["tansen"]
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = "fat"
opt-level = 3
strip = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
dirs = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
