[package]
name = "easy-csv"
version = "0.2.0"
description = "Handle CSV data in a modular way"
authors = ["tansen"]
edition = "2024"
rust-version = "1.94.0"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[profile.release]
lto = "fat"
opt-level = 3
strip = true
debug = false
codegen-units = 1
panic = "abort"

[dependencies]
tauri = { version = "2", features = ["devtools", "tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
dirs = "5"
csv = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "process"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
